gui/scss/core/_chat.scss
/* ... */
.activity-list {
    border-radius: 5px;
    overflow-x: hidden;
    font-size: 16px;
    text-overflow: ellipsis;
    .activity {
        padding: 10px;
        display: flex;
        align-items: center;
        font-size: 13px;
        background: $activity-bg-color;
        border-radius: 7px;
        margin: 0 5px 3px;
    }
}

.activity-feed-header {
    font-size: 13px;
    padding: 20px 10px 5px;
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    top: 0;
    z-index: 9999;
    position: sticky;
    background: $light-background-color;
}

.activity-feed-column {
    width: 275px;
    flex-shrink: 0;
    height: 100%;

    overflow-y: scroll;

    &::-webkit-scrollbar {
        width: 7px;
    }

    &::-webkit-scrollbar-track {
        background-color: transparent;
    }

    &::-webkit-scrollbar-thumb {
        background-color: transparent;
        border-radius: 7px;
    }

    &:hover {
        &::-webkit-scrollbar-thumb {
            background-color: #202225;
        }
    }
}


// Chat Screen
.viewer-list-column {
    width: 225px;
    flex-shrink: 0;
    height: 100%;

    overflow-y: scroll;

    &::-webkit-scrollbar {
        width: 7px;
    }

    &::-webkit-scrollbar-track {
        background-color: transparent;
    }

    &::-webkit-scrollbar-thumb {
        background-color: transparent;
        border-radius: 7px;
    }

    &:hover {
        &::-webkit-scrollbar-thumb {
            background-color: #202225;
        }
    }
}

.viewer-list-header {
    font-size: 13px;
    padding: 20px 10px 3px;
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    position: sticky;
    top: 0;
    z-index: 9999;
    background: $light-background-color;
}

.pronoun {
    font-weight: 400;
    border: 0.5px solid;
    border-radius: 6px;
    font-size: 12px;
    padding: 3px 3px 2px;
    margin-right: 3px;
    line-height: 1;
}

.activity-message > p:first-child {
    margin: 0 !important;
}


.chat-window-column {
    display:flex;
    flex-direction: column;
    width: 100%;
    height: 100%;
    padding-bottom: 10px;
    background: $light-background-color + 15%;
}

.chat-window{
    height: 100%;
    flex: 1;
    height:100%;
    overflow-x: hidden;
    overflow-y: scroll;
    display: flex;
    flex-direction: column;
    @media only screen and (max-width: 779px) {
        border-left: 1px solid $chatBorder;
    }
    &::-webkit-scrollbar-track {
        background-color: transparent;
    }
    &::-webkit-scrollbar-thumb {
        background-color: #202225;
        border-radius: 7px;
    }
    &::-webkit-scrollbar {
        width: 7px;
    }
}

.chat-window-wrapper {
    display: flex;
    height: 100%;
    position: relative;
}


.chat-window-message-wrapper {
    padding-bottom:6px;
    margin-bottom: auto;
}

.chatMessage{
    padding-bottom:.2em;
    margin-bottom:.2em;
    clear:both;
    float:left;
    width:100%;
    .chatLeft{
        vertical-align: top;
        width:9%;
        min-width:45px;
        float:left;
        @media only screen and (max-width: 980px) {
            display:none;
        }
    }
    .chatRight{
        vertical-align: top;
        background-color: $dark-background-color;
        border-radius: 0px 5px 5px 5px;
        padding: 5px 10px 5px 10px;
        position:relative;
        top:5px;
        margin-left:10%;
        @media only screen and (min-width: 980px) {
            &::before{
                content: ' ';
                border-width: 0 10px 10px 0px;
                border-color: transparent $dark-background-color transparent transparent;
                position:absolute;
                top:0px;
                left:-10px;
                width:0px;
                height:0px;
                border-style: solid;
            }
        }
        @media only screen and (max-width: 980px) {
            margin-left:0px;
        }
    }
}

.clickable-link {
    cursor: pointer;
    color: rgb(62, 135, 218) !important;
    &:hover {
        color: rgb(52, 118, 189) !important;
    }
}


.chat-content-wrap{
    .chatSticker{
        text-align:center;
        padding: 5px 10px;
        background-color: $sticker-bg-color;
        border-radius: 18px;
        line-height:24px;
        color: lightgray;
        width:150px;
    }
}

.chat-autodisconnected {
    position: absolute;
    bottom: 0;
    width: 100%;
    background: rgba(0, 0, 0, 0.6);
    padding: 10px;
}

